dotnet/versioned_docs/version-1.18/api/class-response.mdx
---
id: class-response
title: "Response"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

[Response] class represents responses which are received by page.


- [Response.AllHeadersAsync()](./api/class-response.mdx#response-all-headers)
- [Response.BodyAsync()](./api/class-response.mdx#response-body)
- [Response.FinishedAsync()](./api/class-response.mdx#response-finished)
- [Response.Frame](./api/class-response.mdx#response-frame)
- [Response.Headers](./api/class-response.mdx#response-headers)
- [Response.HeadersArrayAsync()](./api/class-response.mdx#response-headers-array)
- [Response.HeaderValueAsync(name)](./api/class-response.mdx#response-header-value)
- [Response.HeaderValuesAsync(name)](./api/class-response.mdx#response-header-values)
- [Response.JsonAsync()](./api/class-response.mdx#response-json)
- [Response.Ok](./api/class-response.mdx#response-ok)
- [Response.Request](./api/class-response.mdx#response-request)
- [Response.SecurityDetailsAsync()](./api/class-response.mdx#response-security-details)
- [Response.ServerAddrAsync()](./api/class-response.mdx#response-server-addr)
- [Response.Status](./api/class-response.mdx#response-status)
- [Response.StatusText](./api/class-response.mdx#response-status-text)
- [Response.TextAsync()](./api/class-response.mdx#response-text)
- [Response.Url](./api/class-response.mdx#response-url)

## Response.AllHeadersAsync() {#response-all-headers}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-all-headers-return"/> &#60;[IDictionary]<[string], [string]>&#62;<a href="#response-all-headers-return" class="list-anchor">#</a>

An object with all the response HTTP headers associated with this response.

## Response.BodyAsync() {#response-body}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-body-return"/> &#60;[byte]&#91;&#93;&#62;<a href="#response-body-return" class="list-anchor">#</a>

Returns the buffer with response body.

## Response.FinishedAsync() {#response-finished}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-finished-return"/> &#60;[string]?&#62;<a href="#response-finished-return" class="list-anchor">#</a>

Waits for this response to finish, returns always `null`.

## Response.Frame {#response-frame}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-frame-return"/> &#60;[Frame]&#62;<a href="#response-frame-return" class="list-anchor">#</a>

Returns the [Frame] that initiated this response.

## Response.HeaderValueAsync(name) {#response-header-value}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-header-value-option-name"/> &#60;[string]&#62; Name of the header.<a href="#response-header-value-option-name" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-header-value-return"/> &#60;[string]?&#62;<a href="#response-header-value-return" class="list-anchor">#</a>

Returns the value of the header matching the name. The name is case insensitive. If multiple headers have the same name (except `set-cookie`), they are returned as a list separated by `, `. For `set-cookie`, the `\n` separator is used. If no headers are found, `null` is returned.

## Response.HeaderValuesAsync(name) {#response-header-values}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-header-values-option-name"/> &#60;[string]&#62; Name of the header.<a href="#response-header-values-option-name" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-header-values-return"/> &#60;[IEnumerable]<[string]>&#62;<a href="#response-header-values-return" class="list-anchor">#</a>

Returns all values of the headers matching the name, for example `set-cookie`. The name is case insensitive.

## Response.Headers {#response-headers}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-headers-return"/> &#60;[IDictionary]<[string], [string]>&#62;<a href="#response-headers-return" class="list-anchor">#</a>

**DEPRECATED** Incomplete list of headers as seen by the rendering engine. Use [Response.AllHeadersAsync()](./api/class-response.mdx#response-all-headers) instead.

## Response.HeadersArrayAsync() {#response-headers-array}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-headers-array-return"/> &#60;[IEnumerable]<`HttpHeader`>&#62;<a href="#response-headers-array-return" class="list-anchor">#</a>
  - `name` &#60;[string]&#62; Name of the header.
  - `value` &#60;[string]&#62; Value of the header.

An array with all the request HTTP headers associated with this response. Unlike [Response.AllHeadersAsync()](./api/class-response.mdx#response-all-headers), header names are NOT lower-cased. Headers with multiple entries, such as `Set-Cookie`, appear in the array multiple times.

## Response.JsonAsync() {#response-json}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-json-return"/> &#60;[JsonElement]?&#62;<a href="#response-json-return" class="list-anchor">#</a>

Returns the JSON representation of response body.

This method will throw if the response body is not parsable via `JSON.parse`.

## Response.Ok {#response-ok}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-ok-return"/> &#60;[bool]&#62;<a href="#response-ok-return" class="list-anchor">#</a>

Contains a boolean stating whether the response was successful (status in the range 200-299) or not.

## Response.Request {#response-request}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-request-return"/> &#60;[Request]&#62;<a href="#response-request-return" class="list-anchor">#</a>

Returns the matching [Request] object.

## Response.SecurityDetailsAsync() {#response-security-details}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-security-details-return"/> &#60;SecurityDetails?&#62;<a href="#response-security-details-return" class="list-anchor">#</a>
  - `issuer` &#60;[string]?&#62; Common Name component of the Issuer field. from the certificate. This should only be used for informational purposes. Optional.
  - `protocol` &#60;[string]?&#62; The specific TLS protocol used. (e.g. `TLS 1.3`). Optional.
  - `subjectName` &#60;[string]?&#62; Common Name component of the Subject field from the certificate. This should only be used for informational purposes. Optional.
  - `validFrom` &#60;[double]?&#62; Unix timestamp (in seconds) specifying when this cert becomes valid. Optional.
  - `validTo` &#60;[double]?&#62; Unix timestamp (in seconds) specifying when this cert becomes invalid. Optional.

Returns SSL and other security information.

## Response.ServerAddrAsync() {#response-server-addr}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-server-addr-return"/> &#60;ServerAddr?&#62;<a href="#response-server-addr-return" class="list-anchor">#</a>
  - `ipAddress` &#60;[string]&#62; IPv4 or IPV6 address of the server.
  - `port` &#60;[int]&#62;

Returns the IP address and port of the server.

## Response.Status {#response-status}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-status-return"/> &#60;[int]&#62;<a href="#response-status-return" class="list-anchor">#</a>

Contains the status code of the response (e.g., 200 for a success).

## Response.StatusText {#response-status-text}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-status-text-return"/> &#60;[string]&#62;<a href="#response-status-text-return" class="list-anchor">#</a>

Contains the status text of the response (e.g. usually an "OK" for a success).

## Response.TextAsync() {#response-text}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-text-return"/> &#60;[string]&#62;<a href="#response-text-return" class="list-anchor">#</a>

Returns the text representation of response body.

## Response.Url {#response-url}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-url-return"/> &#60;[string]&#62;<a href="#response-url-return" class="list-anchor">#</a>

Contains the URL of the response.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[WebSocketFrame]: ./api/class-websocketframe.mdx "WebSocketFrame"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[bool]: https://docs.microsoft.com/en-us/dotnet/api/system.boolean "bool"
[double]: https://docs.microsoft.com/en-us/dotnet/api/system.double "double"
[byte]: https://docs.microsoft.com/en-us/dotnet/api/system.byte "byte"
[int]: https://docs.microsoft.com/en-us/dotnet/api/system.int32 "int"
[void]: https://docs.microsoft.com/en-us/dotnet/csharp/language-reference/builtin-types/void "void"
[string]: https://docs.microsoft.com/en-us/dotnet/api/system.string "string"
[URL]: https://nodejs.org/api/url.html "URL"
[Regex]: https://docs.microsoft.com/en-us/dotnet/api/system.text.regularexpressions.regex "Regex"

[Action]: https://docs.microsoft.com/en-us/dotnet/api/system.action-1 "Action"
[Func]: https://docs.microsoft.com/en-us/dotnet/api/system.func-2 "Func"
[IEnumerable]: https://docs.microsoft.com/en-us/dotnet/api/system.collections.ienumerable "IEnumerable"
[IDictionary]: https://docs.microsoft.com/en-us/dotnet/api/system.collections.idictionary "IDictionary"
[Task]: https://docs.microsoft.com/en-us/dotnet/api/system.threading.tasks.task?view=net-5.0 "Task"
[IReadOnlyDictionary]: https://docs.microsoft.com/en-us/dotnet/api/system.collections.generic.ireadonlydictionary-2 "IReadOnlyDictionary"
[JsonElement]: https://docs.microsoft.com/en-us/dotnet/api/system.text.json.jsonelement "JsonElement"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
